# HPC

Practical2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matrix_product  matrix_product.cxx  max_subarray
Practical2/Practical2-src/: CMakeLists.txt  matrix_product.cxx
